common-applications/test-environment/easysoftware/monitoring/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: easysoftware-monitoring-ingress
  namespace: easysoftware
spec:
  tls:
    - hosts:
        - easysoftware-monitoring.test.osinfra.cn
      secretName: website-tls
  rules:
  - host: easysoftware-monitoring.test.osinfra.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: easysoftware-monitoring-service
            port:
              number: 5000
  ingressClassName: nginx
